--- a/Laboral/src/formularios/Despido.form
+++ b/Laboral/src/formularios/Despido.form
@@ -170,6 +170,9 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="txtBaseCotizacion">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="1000"/>
+              </Properties>
               <Events>
                 <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtBaseCotizacionFocusGained"/>
                 <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtBaseCotizacionFocusLost"/>
